<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/signup_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textImeMultiLine|textPersonName" />

    <EditText
        android:id="@+id/signup_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_conpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/conpass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textPersonName" />

</LinearLayout>