<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="net.net16.httpschaos_workbench.rpgchat.LoginActivity"
    tools:ignore="DisableBaselineAlignment">

    <Button
        android:id="@+id/custom_login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/custom_signup"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/cadastrar" />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/recover_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar" />

</LinearLayout>